[package]
name = "bongo-cat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bongo-cat"
path = "src/main.rs"

[[bin]]
name = "bongo-listener"
path = "src/bongo-listener.rs"

[dependencies]
raylib = "6.0.0"
rdev = "0.5.3"

[package.metadata.bundle]
name = "BongoCat"
identifier = "io.github.antallis.bongocat"
version = "0.1.0"
resources = ["assets"]
short_description = "A friend that types with you"
long_description = "A friend that types with you"
icon = ["assets/icons/AppIcon.icns"]

